--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "next": "14.2.4",
-    "react": "^18.2.0",
-    "react-dom": "^18",
-    "react-modal": "^3.16.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-player": "^2.10.0",
-    "reactstrap": "^9.0.2",
+    "reactstrap": "^9.2.2",
     "sass": "^1.50.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.13.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
